# mtls-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  UI_FEATURES.md  deny.toml  docker-compose.yml  mtls-proxy.spec  run.sh  test.crt  test_benchmark_logs.db-shm  test_benchmark_logs.db-wal  test_cert.crt  test_config_ui.sh  test_logs.db-shm  test_logs.db-wal  test_memory_logs.db-shm  test_memory_logs.db-wal  test_metrics.sh  test_performance_logs.db-shm  test_performance_logs.db-wal  test_proxy.sh  test_requests.http  test_security_logs.db-shm  test_security_logs.db-wal  test_simple.sh  test_ui_refactor.sh
certs/: ca.crt  ca.key  ca.srl  client.crt  client.key  server.crt  server.key
config/: config.toml  default.toml  local.toml
docs/: API_DOCUMENTATION.md  CERTIFICATE_SETUP.md  DEMONSTRATION.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_SUMMARY.md  DEVELOPER_GUIDE.md  GITHUB_ACTIONS.md  GITHUB_ACTIONS_QUICKSTART.md  HTTPS_TO_HTTP_CONVERSION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_GUIDE.md  LOCAL_TESTING.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_PROGRESS_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  REMAINING_FEATURES_CHECKLIST.md  TECHNOLOGY_CHOICES.md  TESTING_SUMMARY.md  UI_SEPARATION_PLAN.md  USER_GUIDE.md
examples/: test_proxy.py  test_ui.py
logs/: audit.db  proxy_logs.db
mock-server/: Cargo.toml  README.md  UI_FEATURES.md  generate_certs.sh  plan.md
mock-server/certs/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
mock-server/config/: default.toml  local.toml  test_scenarios.toml
mock-server/examples/: test_mock_server.py  test_ui.py
mock-server/scripts/: setup.sh
mock-server/src/: config.rs  lib.rs  main.rs  server.rs  tls.rs
mock-server/src/handlers/: chat.rs  health.rs  mod.rs  models.rs
mock-server/src/responses/: chat.rs  mod.rs  models.rs
mock-server/src/ui/: handlers.rs  mod.rs  static_files.rs  templates.rs
mock-server/src/utils/: cert_gen.rs  mod.rs
packaging/: mtls-proxy.8  mtls-proxy.preset  mtls-proxy.service  mtls-proxy.spec
scripts/: build-docker.sh  build-package.sh  build-rpm.sh  check-rust-version.sh  generate_certs.ps1  generate_certs.sh  mtls-proxy.service  run-tests.sh  setup.sh
src/: audit.rs  cli.rs  (+12 more)
(+22 files in other folders)
